@@ -81,7 +81,7 @@ for rendering.
 .BI \-l \ mode
 Set start-up rendering mode (0 <=
 .I mode
-<= 5).
+<= 6).
 .
 .TP
 .B \-p
