@@ -1,3 +1,14 @@
+2017-12-02  Werner Lemberg  <wl@gnu.org>
+
+	[ftview] Fix `-l' option.
+
+	* src/ftview.c (usage): Fix reported range.
+	(parse_cmdline) <l>: Fix range checking.
+	Set `handle->lcd_mode'; without this, there is no effect at
+	start-up.
+
+	* src/ftview.1: Fix argument range of `-l'.
+
 2017-10-21  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	* src/ttdebug.c: Fix compilation on Windows.
